@@ -1,4 +1,4 @@
-*pyclewn.txt*                                   Last change: 2009 December 19
+*pyclewn.txt*                                   Last change: 2009 December 31
 
 
                             PYCLEWN USER MANUAL
@@ -19,17 +19,18 @@ The Pyclewn user guide                              *pyclewn*
 1. Introduction                                     *pyclewn-intro*
 
 
-Pyclewn is a python program that allows the use of gvim as a front end to a
-debugger. Pyclewn uses the netbeans protocol to control gvim.
+Pyclewn is a python program that allows the use of vim as a front end to a
+debugger. Pyclewn uses the netbeans protocol to control vim.
 
 The debugger output is redirected to a vim window, the|pyclewn-console|. The
 debugger commands are mapped to vim user-defined commands with a common letter
 prefix (the default is the|C|letter), and with vim command completion
 available on the commands and their first argument.
 
-On unix, the controlling terminal of the program to debug is the terminal used
-to launch pyclewn, or any other terminal when the debugger allows it (for
-example, gdb with the attach and tty commands).
+On unix when running gvim, the controlling terminal of the program to debug is
+the terminal used to launch pyclewn. Any other terminal can be used when the
+debugger allows it, for example after using the ``attach`` or ``tty`` gdb
+commands.
 
 On Windows, gdb pops up a console attached to the program to debug.
 
@@ -59,7 +60,7 @@ Pyclewn provides the following features:
   Pyclewn automatically finds the source file for the breakpoint if it exists,
   and tells vim to load and display the file and highlight the line.
 
-* The value of an expression or variable is displayed in a balloon in vim
+* The value of an expression or variable is displayed in a balloon in gvim
   when the mouse pointer is hovering over the selected expression or the
   variable.
 
@@ -264,7 +265,7 @@ The full description of the command line options follows:
                     listens on host:port, with host being a name or the IP
                     address of one of the local network interfaces in standard
                     dot notation. These parameters must match those used by
-                    gvim for the connection to succeed.
+                    vim for the connection to succeed.
 
 -l {LEVEL}
 --level={LEVEL}     Set the log level to LEVEL: critical, error, warning, info,
@@ -385,9 +386,18 @@ or from normal mode >
     <CR>
 
 
+Vim in a terminal
+-----------------
+The debuggee output is redirected to '/dev/null' when the name of the program
+is "vim" or "vi". One must use the "set inferior-tty" gdb command to redirect
+the debuggee output to a terminal.
+
+Do not use the "--daemon" command line option when running vim in a console.
+
+
 Balloon:
 --------
-A variable is evaluated by the debugger and displayed in a balloon in vim,
+A variable is evaluated by the debugger and displayed in a balloon in gvim,
 when the mouse pointer is hovering over the the variable. To get the
 evaluation of an expression, first select the expression in visual mode in the
 source code and point the mouse over the selected expression. To disable this
