@@ -16,6 +16,7 @@
 <h3>Support</h3>
 <ul>
     <li><a href="mercurial.html">mercurial</a></li>
+    <li><a href="vim-patches.html">vim patches</a></li>
     <li><a href="https://lists.sourceforge.net/lists/listinfo/pyclewn-general">mailing list</a></li>
     <li><a href="http://sourceforge.net/tracker/?group_id=212808&atid=1023202">bug tracker</a></li>
 </ul>
