@@ -4,19 +4,22 @@ News
 Pyclewn 1.1
 -----------
 
-.. December 28, 2009
+.. December 31, 2009
 
 New features
 ^^^^^^^^^^^^
+
+* Support vim running in a terminal, this requires netbeans support in Vim
+  when running in a terminal. The implementation of netbeans in ``plain vim``
+  (vim running in a terminal), is available as a Mercurial Queues patch for
+  the official Vim release and for the latest development source tree.  See
+  `vim patches <http://pyclewn.sourceforge.net/vim-patches.html>`_.
 
 Changes
 ^^^^^^^
 
 * The console vim buffer and the watched variables buffer are set with
   'noswapfile' option.
-
-Bug fixes
-^^^^^^^^^
 
 Pyclewn 1.0
 -----------
